defense/test-bad-registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-bad-registry
  namespace: vuln-apps
spec:
  containers:
    - name: test
      image: badregistry.io/malicious:latest
