defense/test-privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-privileged
  namespace: vuln-apps
spec:
  containers:
    - name: test
      image: nginx:alpine
      securityContext:
        privileged: true
